# astra-atlas-lang

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
artifacts/p55_1/: baseline_codespaces_log.txt
artifacts/p57/: astra-p57-validation-summary.json  astra-p57-validation-summary.template.json
docs/: P55_1_CODEX_TASKS.md  P55_1_SPEC.md  astra-p57-audit.md  astra-p57-reintegration-classique.md  validation_p58.md  validation_p59_classique.md  validation_p60_sys_cleanup.md  validation_p61_virtual_ratio_lab.md
docs/analysis/: ASTRA-P63-measured-ratio-calibration-analysis.md  ASTRA-P64-address-local-realish-ratio-analysis.md  ASTRA-P65-2-local-actor-overhead-calibration-analysis.md  ASTRA-P65-address-local-actor-runtime-analysis.md  ASTRA-P66-address-fiber-local-actor-runtime-analysis.md  ASTRA-P67-address-fiber-overhead-calibration-analysis.md  (+23 more)
scripts/: build_all_reports.sh  build_report.sh  validate_p57_local.sh  validate_p58_local.sh
src/: cli.rs  lib.rs  main.rs  p57.rs  p63.rs  p64.rs  p65.rs  p66.rs  p67.rs  p68.rs  p69.rs  p70.rs  p71.rs  p72.rs  p73.rs  p74.rs  p75.rs  p76.rs  p77.rs  p78.rs  p79.rs  real_ratio.rs  runtime.rs  virtual_ratio.rs
tests/: atlas_tests.rs  p57_tests.rs  p58_tests.rs  p60_tests.rs  p61_tests.rs  p62_tests.rs  p63_tests.rs  p64_tests.rs  p65_tests.rs  p66_tests.rs  p67_tests.rs  p68_tests.rs  p69_tests.rs  p70_tests.rs  p71_tests.rs  p72_tests.rs  p73_tests.rs  p74_tests.rs  p75_tests.rs  p76_tests.rs  p77_tests.rs  p78_tests.rs  p79_tests.rs  runtime_tests.rs
(+164 files in other folders)
